fix typo and test github actions

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div id="middle-div">
-            Enter the bill amount and <bro> get a tip value so that <br> the total bill is a palindrome.
+            Enter the bill amount and <br> get a tip value so that <br> the total bill is a palindrome.
         </div>
 
         <div id="bottom-div">
