test custom actions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <meta name="theme-color" content="#000" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#000" media="(prefers-color-scheme: dark)">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="TipiT" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link
+        href="url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII="
+        rel="apple-touch-startup-image">
     <title>TipiT</title>
     <meta name="description"
         content="Calculate tips and get the total amout of the bill as palindrome so checking bank statement is gonna be a breeze">
