add version number on html

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
         <div id="middle-div">
             Enter the bill amount and <br> get a tip value so that <br> the total bill is a palindrome.
+            <div>Version. COMMIT</div>
         </div>
 
         <div id="bottom-div">
