--- a/index.html
+++ b/index.html
@@ -49,8 +49,32 @@
         </div>
 
         <div id="middle-div">
-            Enter the bill amount and <br> get a tip value so that <br> the total bill is a palindrome.
-            <div>Version. COMMIT</div>
+            <h1>TipiT</h1>
+            <div>Enter the bill amount and get a tip value so that the total bill is a palindrome.</div>
+
+
+            <div id="paginated_gallery" class="gallery">
+                <div class="gallery_scroller">
+                    <div class="card">
+                        <span>🥳</span>
+                        Reconcile your credit card bill in seconds!
+                    </div>
+                    <div class="card">
+                        <span>💳</span>
+                        No more fumbling with restaurant and bar receipts when you get your credit card
+                        bill!
+                    </div>
+                    <div class="card">
+                        <span>🥰</span>
+                        With TipiT, you can easily tell whether your receipt totals have been
+                        manipulated!
+                    </div>
+                </div>
+                <span class="btn prev"></span>
+                <span class="btn next"></span>
+            </div>
+
+            <div class="rev"><a href="https://fabriziogiordano.github.io/tipit/" target="_new">Version. COMMIT</a></div>
         </div>
 
         <div id="bottom-div">
