better back icon

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 
         <div id="middle-div">
             <h1>TipiT</h1>
-            <div>Enter the bill amount and get a tip value so that the total bill is a palindrome.</div>
+            <div>Enter the bill amount and get a tip value so that the total is a palindrome.</div>
 
 
             <div id="paginated_gallery" class="gallery">
