Updatate some styling

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,6 @@
             <h1>TipiT</h1>
             <div>Enter the bill amount and get a tip value so that the total is a palindrome.</div>
 
-
             <div id="paginated_gallery" class="gallery">
                 <div class="gallery_scroller">
                     <div class="card">
@@ -75,8 +74,10 @@
                 <span class="btn next"></span>
             </div>
 
-            <div class="rev"><a href="https://fabriziogiordano.github.io/tipit/" target="_new">Version. COMMIT</a></div>
             <div class="qr">
+                <h2>Share TipiT with friends</h2>
+                <div>Share the url or have then scan the QR code below.</div>
+
                 <svg width="296" height="296" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink">
                     <path fill="#000" d="M0 0h296v296H0z" />
@@ -524,6 +525,8 @@
                     <use xlink:href="#a" x="256" y="240" />
                 </svg>
             </div>
+
+            <div class="rev"><a href="https://fabriziogiordano.github.io/tipit/" target="_new">Version. COMMIT</a></div>
 
         </div>
 
