--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 
             <div class="qr">
                 <h2>Share TipiT with friends</h2>
-                <div>Share the url or have then scan the QR code below.</div>
+                <div>Share the url or have them scan the QR code below.</div>
 
                 <svg width="296" height="296" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink">
