--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
 
             <div id="middle-div-tell-me-more" onclick="openMiddleDivWrapper()">Tell me more</div>
 
-            <div id="middle-div-more-wrapper" class="open">
+            <div id="middle-div-more-wrapper" class="">
                 <div class="gallery_scroller">
                     <div class="card">
                         <span>🥳</span>
