--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,16 @@
         </div>
 
         <div id="middle-div">
-            <h1>TipiT</h1>
+            <!-- <h1>TipiT</h1> -->
+
+            <svg title="TipiT" width="100px" height="46px" style="margin: 30px 0 20px"
+                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 29 13">
+                <path fill="#FFF"
+                    d="M.54.167999h5.952V1.848H4.344V9h-1.74V1.848H.54V.167999ZM7.89525 3.756h1.68V9h-1.68V3.756Zm-.036-1.86c0-.248.096-.452.288-.612.2-.16.412-.24.636-.24.224 0 .428.08.612.24.192.16.288.364.288.612s-.096.452-.288.612c-.184.152-.388.228-.612.228-.224 0-.436-.076-.636-.228-.192-.16-.288-.364-.288-.612Zm6.73415 7.248c-.312 0-.62-.056-.924-.168-.296-.12-.544-.288-.744-.504l.048-.492v3.54h-1.668V3.636h1.44l.24 1.02-.132-.36c.272-.232.576-.424.912-.576.336-.152.724-.228 1.164-.228.488 0 .924.116 1.308.348.384.224.684.552.9.984.224.424.336.936.336 1.536 0 .592-.124 1.096-.372 1.512-.248.416-.588.732-1.02.948-.432.216-.928.324-1.488.324Zm-.336-1.32c.272 0 .52-.06.744-.18.232-.12.416-.288.552-.504.144-.224.216-.476.216-.756 0-.296-.064-.552-.192-.768-.12-.224-.288-.396-.504-.516-.208-.128-.44-.192-.696-.192-.224 0-.424.032-.6.096-.168.056-.32.144-.456.264-.128.112-.24.256-.336.432v1.284c.064.168.156.316.276.444.12.128.264.228.432.3.176.064.364.096.564.096Z" />
+                <path fill="#F90"
+                    d="M28.46 12.832h-5.952v-1.68h2.148V4h1.74v7.152h2.064v1.68Zm-7.3553-3.588h-1.68V4h1.68v5.244Zm.036 1.86c0 .248-.096.452-.288.612-.2.16-.412.24-.636.24-.224 0-.428-.08-.612-.24-.192-.16-.288-.364-.288-.612s.096-.452.288-.612c.184-.152.388-.228.612-.228.224 0 .436.076.636.228.192.16.288.364.288.612Z" />
+            </svg>
+
             <div>Enter the bill amount and get a tip value so that the total is a palindrome.</div>
 
             <div id="middle-div-tell-me-more" onclick="openMiddleDivWrapper()">Tell me more</div>
@@ -537,6 +546,9 @@
                         <th>%</th>
                         <th>Tip</th>
                         <th>Total</th>
+                    </tr>
+                    <tr class="calc-results-header">
+                        <th colspan="3">Tap on a row for additional details</td>
                     </tr>
                 </thead>
             </table>
