small dollar sign improvements

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="TipiT" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
     <link
         href="url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII="
         rel="apple-touch-startup-image">
