--- a/src/index.html
+++ b/src/index.html
@@ -84,13 +84,11 @@
                     </div>
                     <div class="card">
                         <span>💳</span>
-                        No more fumbling with restaurant and bar receipts when you get your credit card
-                        bill!
+                        No more fumbling with restaurant and bar receipts when you get your credit card bill!
                     </div>
                     <div class="card">
                         <span>🥰</span>
-                        With TipiT, you can easily tell whether your receipt totals have been
-                        manipulated!
+                        With TipiT, you can easily tell whether your receipt totals have been entered incorrectly!
                     </div>
                 </div>
 
