--- a/src/index.html
+++ b/src/index.html
@@ -77,16 +77,16 @@
             <div id="middle-div-tell-me-more" onclick="openMiddleDivWrapper()">Tell me more</div>
 
             <div id="middle-div-more-wrapper" class="">
-                <div class="gallery_scroller">
-                    <div class="card">
+                <div class="gallery-scroller">
+                    <div>
                         <span>🥳</span>
                         Reconcile your credit card bill in seconds!
                     </div>
-                    <div class="card">
+                    <div>
                         <span>💳</span>
                         No more fumbling with restaurant and bar receipts when you get your credit card bill!
                     </div>
-                    <div class="card">
+                    <div>
                         <span>🥰</span>
                         With TipiT, you can easily tell whether your receipt totals have been entered incorrectly!
                     </div>
@@ -580,8 +580,8 @@
         </div>
     </div>
 
-    <div id="tipFullScreenWrapper">
-        <div id="tipFullScreenContainer"></div>
+    <div id="tip-full-screen-wrapper">
+        <div id="tip-full-screen-container"></div>
         <svg onClick="closeTipFullScreen()" id="clear-img" fill="#fff" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24" width="24px" height="24px">
             <path
