fix error messages

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <meta name="description"
         content="Calculate tips and get the total amout of the bill as palindrome so checking bank statement is gonna be a breeze">
     <link rel="stylesheet" href="./assets/css/main.css?v=COMMIT" />
-    <script src="./assets/js/calc.js?v=COMMIT"></script>
+    <script src="./assets/js/calc.js?v=COMMIT" defer></script>
 </head>
 
 <body>
