add tracking events to see how people are using it

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,9 @@
     <meta name="description"
         content="Calculate tips and get the total amout of the bill as palindrome so checking bank statement is gonna be a breeze">
     <link rel="stylesheet" href="./assets/css/main.css?v=COMMIT" />
+    <script>APP_VERSION = "COMMIT"</script>
     <script src="./assets/js/calc.js?v=COMMIT" defer></script>
+    <script src="./assets/js/bundle.min.js?v=COMMIT" defer></script>
 </head>
 
 <body>
