add product hunt logo

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <meta charset="UTF-8">
+    <title>TipiT</title>
+    <meta name="description" content="Calculate tips and get the total amout of the bill as palindrome so checking bank statement is gonna be a breeze">
     <link rel="apple-touch-icon" sizes="120x120" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
@@ -15,7 +17,7 @@
     <meta name="contact" content="giordano.fabrizio@gmail.com">
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#000">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#000" media="(prefers-color-scheme: dark)">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,9 +28,6 @@
     <link
         href="url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII="
         rel="apple-touch-startup-image">
-    <title>TipiT</title>
-    <meta name="description"
-        content="Calculate tips and get the total amout of the bill as palindrome so checking bank statement is gonna be a breeze">
     <link rel="stylesheet" href="./assets/css/main.css?v=COMMIT" />
     <script>APP_VERSION = "COMMIT"</script>
     <script src="./assets/js/calc.js?v=COMMIT" defer></script>
@@ -75,6 +74,8 @@
                     d="M61.912 54.864c-1.872 0-3.72-.336-5.544-1.008-1.776-.72-3.264-1.728-4.464-3.024l.288-2.952v21.24H42.184V21.816h8.64l1.44 6.12-.792-2.16c1.632-1.392 3.456-2.544 5.472-3.456 2.016-.912 4.344-1.368 6.984-1.368 2.928 0 5.544.696 7.848 2.088 2.304 1.344 4.104 3.312 5.4 5.904 1.344 2.544 2.016 5.616 2.016 9.216 0 3.552-.744 6.576-2.232 9.072-1.488 2.496-3.528 4.392-6.12 5.688-2.592 1.296-5.568 1.944-8.928 1.944Zm-2.016-7.92c1.632 0 3.12-.36 4.464-1.08 1.392-.72 2.496-1.728 3.312-3.024.864-1.344 1.296-2.856 1.296-4.536 0-1.776-.384-3.312-1.152-4.608-.72-1.344-1.728-2.376-3.024-3.096-1.248-.768-2.64-1.152-4.176-1.152-1.344 0-2.544.192-3.6.576-1.008.336-1.92.864-2.736 1.584-.768.672-1.44 1.536-2.016 2.592v7.704c.384 1.008.936 1.896 1.656 2.664.72.768 1.584 1.368 2.592 1.8 1.056.384 2.184.576 3.384.576Z" />
             </svg>
             <div>Enter the bill amount and get a tip value so that the total is a palindrome.</div>
+
+            <div style="margin: 15px 0"><a href="https://www.producthunt.com/posts/tipit-palindromic-tipping-calculator?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-tipit&#0045;palindromic&#0045;tipping&#0045;calculator" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=387674&theme=dark" alt="TipiT&#0032;&#0045;&#0032;Palindromic&#0032;tipping&#0032;calculator - Easily&#0032;check&#0032;correct&#0032;tipping&#0032;on&#0032;your&#0032;credit&#0032;card&#0032;charges | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a></div>
 
             <div id="middle-div-tell-me-more" onclick="openMiddleDivWrapper()">Tell me more</div>
 
